# only-notes-server

./: Cargo.toml  README.md  thunder-collection_API.json
migrations/: 20230402142655_init.down.sql  20230402142655_init.up.sql
src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  request.rs  response.rs  route.rs
